# 0x_protocol_dummy

./: .gitignore  Cargo.toml  README.md  truffle-config.js
contracts/: erc20_transform.sol
data/: genesis.json
data/test_chain/geth/: jwtsecret  nodekey
data/test_chain/geth/chaindata/: 000002.ldb  LOG  MANIFEST-000004
data/test_chain/geth/lightchaindata/: LOG
data/test_chain/geth/nodes/: LOG
data/test_chain/keystore/: UTC--2022-12-07T20-15-54.935525000Z--add1f6f4f593f641a54a66b1b5c80240e4433b6e
hardhat/: hardhat.config.js  package-lock.json  package.json
hardhat/cache/: solidity-files-cache.json
hardhat/contracts/: ZeroProtocol.sol
migrations/: 2_deploy_erc20_transform_contract.js
scripts/: attach  create_account  create_network  get_balance  initialize_chain  install_node_dependencies  start_mine  stop_mine  truffle_compile  truffle_console  truffle_migrate
src/: main.rs
