[package]
name = "eulith_interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
ethers-solc = "1.0.2"
ethers-contract = "1.0.2"
ethers-providers = "1.0.2"
eyre = "*"
hex = "*"
tokio = { version = "1.23.0", features = ["full"] }
